--- a/encuentro-20/index.html
+++ b/encuentro-20/index.html
@@ -10,6 +10,6 @@
 <body>
   <h1>Abre la consola! (F12)</h1>
 </body>
-<!-- <script src="script.js"></script> -->
+<script src="script.js"></script>
 
 </html>
