Envio resolucion actividad Envuentro #22

--- a/encuentro-22/ejercitacion_na/index.html
+++ b/encuentro-22/ejercitacion_na/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
  <h1>Resolucion Actividad encuentro #22</h1>
+ <!-- <script src="js/stop.js"></script> -->
+ <!-- <script src="js/dividirArrays.js"></script> -->
+ <!-- <script src="js/eliminarExtremos.js"></script> -->
+<script src="js/dividirArraysII.js" ></script>
+
+
+
 </body>
 </html>
