--- a/encuentro-23/index.html
+++ b/encuentro-23/index.html
@@ -10,6 +10,7 @@
 <body>
   <h1>Abre la consola (F12)</h1>
 </body>
-<script src="script.js"></script>
+<!-- <script src="script.js"></script> -->
+<script src="programemos.js"></script>
 
 </html>
