se rehizo funcion de cambio de imagen utilizando setInterval

--- a/encuentro-25-DOM-y-localStorage/ejercitacion_ms/index.html
+++ b/encuentro-25-DOM-y-localStorage/ejercitacion_ms/index.html
@@ -57,12 +57,12 @@
                     <p class="text-center display-4">Nombre</p>
                 </div>
                 <div class="col-md-6 ">
-                    <img id="img3" class="rounded-circle" src="img/many-airplanes-right.jpg" width="100%" height=""/>
+                    <img id="img3" class="rounded-circle" src="img/many-airplanes-right.jpg" onmouseover="this.style.cursor='pointer'" onclick="invertImg()" width="100%" height=""/>
                     <p class="text-center display-4">Nombre</p>
                 </div>
             </div>
             <div class="container text-center">
-                <button onclick="navbarBackground()" type="button" class="btn btn-primary btn-lg mb-3 more-width">Ver más</button>
+                <button type="button" class="btn btn-primary btn-lg mb-3 more-width">Ver más</button>
             </div>
         </div>
     </div>
